--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "fs": "^0.0.1-security",
-    "mongoose": "^6.7.0",
+    "mongoose": "^6.12.8",
     "multer": "^1.4.5-lts.1"
   },
-  "devDependencies": {},
   "keywords": []
 }
